--- a/registration/static/styles/sass/style.sass
+++ b/registration/static/styles/sass/style.sass
@@ -23,3 +23,12 @@
 
 b
     color: red
+
+.btn-primary
+    &:hover
+        text-decoration: underline
+        background: yellow
+        color: black
+        cursor: pointer
+        border-color: darken(yellow, 5%)
+
