--- a/registration/templates/index.html
+++ b/registration/templates/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Реєстрація користувача</title>
+    <title>User Register</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/css/style.min.css') }}">
@@ -12,57 +12,57 @@
 
 <body>
     <div class="container">
-        <h1 class="mt-1percent">Реєстрація</h1>
+        <h1 class="mt-1percent">User Register</h1>
         <form action="/" method="POST">
             <div class="row">
                 <div class="col-6">
                     <div class="form-group">
-                        <label for="username">Ім'я користувача<b>*</b></label>
-                        <input class="form-control" minlength="5" maxlength="32" type="text" id="username" name="username" placeholder="Ваше унікальне ім'я або псевдонім" required>
+                        <label for="username">Username<b>*</b></label>
+                        <input class="form-control" minlength="5" maxlength="32" type="text" id="username" name="username" placeholder="Your unique username" required>
                     </div>
                     <div class="form-group">
-                        <label for="full-name">Повне ім'я</label>
-                        <input class="form-control" minlength="5" maxlength="64" type="text" id="full-name" name="full-name" placeholder="Ваше повне ім'я">
+                        <label for="full-name">Full name</label>
+                        <input class="form-control" minlength="5" maxlength="64" type="text" id="full-name" name="full-name" placeholder="Your full name">
                     </div>
                     <div class="form-group">
-                        <label for="email">Адрес електронної пошти<b>*</b></label>
+                        <label for="email">Email<b>*</b></label>
                         <input class="form-control" minlength="5" maxlength="32" type="email" id="email" name="email" placeholder="example@email.org" required>
                     </div>
                     <div class="form-group">
-                        <label for="password">Пароль<b>*</b></label>
-                        <input class="form-control" minlength="8" maxlength="128" type="password" id="password" name="password" placeholder="Пароль не коротше 8 символів" required>
+                        <label for="password">Password<b>*</b></label>
+                        <input class="form-control" minlength="8" maxlength="128" type="password" id="password" name="password" placeholder="Password cannot be short than 8 characters" required>
                     </div>
                     <div class="form-group">
-                        <label for="confirm-password">Повторити пароль<b>*</b></label>
-                        <input class="form-control" minlength="8" maxlength="128" type="password" id="confirm-password" name="confirm-password" placeholder="Повторить пароль" required>
+                        <label for="confirm-password">Repeat password<b>*</b></label>
+                        <input class="form-control" minlength="8" maxlength="128" type="password" id="confirm-password" name="confirm-password" placeholder="Repeat password" required>
                     </div>
                     <div class="form-group">
-                        <label for="birthday">Дата народження<b>*</b></label>
+                        <label for="birthday">Birthday<b>*</b></label>
                         <input class="form-control" max="2005-12-31" type="date" id="birthday" name="birthday" required>
                     </div>
                     <div class="form-group">
-                        <label for="home-address">Домашня адреса</label>
-                        <input class="form-control" minlength="8" maxlength="128" type="text" id="home-address" name="home-address" placeholder="Де проживаете?">
+                        <label for="home-address">Home adress</label>
+                        <input class="form-control" minlength="8" maxlength="128" type="text" id="home-address" name="home-address" placeholder="Where are you live?">
                     </div>
                 </div>
                 <div class="col-6">
                     <div class="form-group">
-                        <label for="phone-number">Номер мобільного телефону</label>
+                        <label for="phone-number">Phone number</label>
                         <input class="form-control" minlength="10" maxlength="10" type="text" id="phone-number" name="phone-number" placeholder="0506814663">
                     </div>
                     <div class="form-group my-7percent">
-                        <label for="gender">Стать</label>
+                        <label for="gender">Gender</label>
                         <select id="select-gender">
-                            <option selected onclick="gender=document.getElementById('gender');gender.style.visibility='hidden';gender.value='не вказано'">Не вказано</option>
-                            <option onclick="gender=document.getElementById('gender');gender.style.visibility='hidden';gender.value='чоловічий'">Чоловічий</option>
-                            <option onclick="gender=document.getElementById('gender');gender.style.visibility='hidden';gender.value='жіночії'">Жіночії</option>
-                            <option onclick="gender=document.getElementById('gender');gender.style.visibility='visible';gender.value='інше'">Інше</option>
+                            <option selected onclick="gender=document.getElementById('gender');gender.style.visibility='hidden';gender.value='not mention'">Not mention</option>
+                            <option onclick="gender=document.getElementById('gender');gender.style.visibility='hidden';gender.value='male'">Male</option>
+                            <option onclick="gender=document.getElementById('gender');gender.style.visibility='hidden';gender.value='female'">Female</option>
+                            <option onclick="gender=document.getElementById('gender');gender.style.visibility='visible';gender.value='other'">Other</option>
                         </select>
-                        <input type="text" name="gender" id="gender" maxlength="32" style="visibility: hidden" value='не вказано' placeholder="А хто ви?">
+                        <input type="text" name="gender" id="gender" maxlength="32" style="visibility: hidden" value='not mention' placeholder="Who are you?">
                     </div>
-                    <h2>Платіжна інформація</h2>
+                    <h2>Payment information</h2>
                     <div class="form-group mb-1percent">
-                        <label for="card-number">Номер кредитної або дебетової картки:</label>
+                        <label for="card-number">Credit card number:</label>
                         <input class="form-control" minlength="16" maxlength="16" type="text" id="card-number" name="card-number" placeholder="5260000000000000">
                     </div>
                     <div>
@@ -71,27 +71,27 @@
                         <img src="{{ url_for('static', filename='images/amex-logo.png') }}" alt="amex" name="amex" class="payment-images">
                         <img src="{{ url_for('static', filename='images/discover-logo.jpg') }}" alt="discover" name="discover" class="payment-images">
                     </div>
-                    <p class="mt-1percent">Ми приймаємо всі основні кредитні та дебетові картки. Якщо у вас є питання стосовно платіжної інформації - щиро просимо вас до <a href="https://www.google.com/" target="_blank">google</a>.</p>
+                    <p class="mt-1percent">We accept all major credit and debit cards. If you have any questions regarding payment information, please go to <a href="https://www.google.com/" target="_blank">google</a>.</p>
                     <div class="form-control">
-                        <label>Термін придатності</label>
+                        <label>Expire:</label>
                         <div style="float: right">
                             <select name="month" id="month">
-                                <option value="--">Місяць</option>
-                                <option value="January">Січень</option>
-                                <option value="February">Лютий</option>
-                                <option value="March">Березень</option>
-                                <option value="April">Квітень</option>
-                                <option value="May">Травень</option>
-                                <option value="June">Червень</option>
-                                <option value="July">Липень</option>
-                                <option value="Augest">Серпень</option>
-                                <option value="September">Вересень</option>
-                                <option value="Jctober">Жовтень</option>
-                                <option value="November">Листопад</option>
-                                <option value="December">Грудень</option>
+                                <option value="--">Month</option>
+                                <option value="January">January</option>
+                                <option value="February">February</option>
+                                <option value="March">March</option>
+                                <option value="April">April</option>
+                                <option value="May">May</option>
+                                <option value="June">June</option>
+                                <option value="July">July</option>
+                                <option value="Augest">Augest</option>
+                                <option value="September">September</option>
+                                <option value="October">October</option>
+                                <option value="November">November</option>
+                                <option value="December">December</option>
                             </select>
                             <select name="year" id="year">
-                                <option value="----">Рік</option>
+                                <option value="----">Year</option>
                                 {% for year in range(2023, 2200) %}
                                 <option value="{{ year }}">{{ year }}</option>
                                 {% endfor %}
@@ -99,14 +99,14 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="cardholder-name">ім'я власника картки</label>
-                        <input class="form-control" minlength="5" maxlength="64" type="text" id="cardholder-name" name="cardholder-name" placeholder="Повне ім'я власника картки">
+                        <label for="cardholder-name">Cardholder's name</label>
+                        <input class="form-control" minlength="5" maxlength="64" type="text" id="cardholder-name" name="cardholder-name" placeholder="Cardholder's full name">
                     </div>
                 </div>
             </div>
             <br>
             <div class="form-group">
-                <input class="btn btn-primary" type="submit" value="Реєстрація">
+                <input class="btn btn-primary" type="submit" value="Register">
             </div>
         </form>
     </div>
