Implemented Product Page and Purchase.

--- a/Online Clothing Store/static/styles/css/style.css
+++ b/Online Clothing Store/static/styles/css/style.css
@@ -595,4 +595,12 @@ footer h5 {
 #cookie div {
   font-size: 16px;
   color: #fff;
+}
+
+.header-cart {
+  width: 300px;
+}
+
+.list-unstyled {
+  font-size: 20px;
 }/*# sourceMappingURL=style.css.map */
