--- a/Online Clothing Store/static/styles/sass/style.sass
+++ b/Online Clothing Store/static/styles/sass/style.sass
@@ -512,3 +512,9 @@ footer h5
 #cookie div
     font-size: 16px
     color: #fff
+
+.header-cart
+    width: 300px
+
+.list-unstyled
+    font-size: 20px
