--- a/Online Clothing Store/templates/base.html
+++ b/Online Clothing Store/templates/base.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/css/style.min.css') }}">
     <script src="{{ url_for('static', filename='js/script.js') }}" type="text/javascript"></script>
+    <script src="https://unpkg.com/alpinejs" defer></script>
 </head>
 <body>
     <div id="top"></div>
