--- a/Online Clothing Store/templates/index.html
+++ b/Online Clothing Store/templates/index.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Home{% endblock %}
+{% block title %}Online Clothing Store{% endblock %}
 {% block content %}
 <main>
     <div id="common-home" class="container">
@@ -8,33 +8,38 @@
                 <h2>Featured</h2>
                 <div class="row">
                     <div class="col-md-4 col-sm-2">
-                        <div id="#header-cart">
+                        {% for product in products %}
+                        <div class="header-cart">
                             <div class="product-thumb">
-                                <div class="image">
-                                    <a href="#">
+                                <div class="image mt-3">
+                                    {% if product.photos[0] %}
+                                    <a href="/product/{{ product.id }}">
                                         <img
-                                            src="#"
-                                            alt="Product Image"
-                                            title="Product Name"
+                                            src="{{ product.photos[0].url }}"
+                                            alt="{{ product.name }}"
+                                            title="{{ product.name }}"
                                             class="img-fluid"
+                                            width="200px"
                                         />
                                     </a>
+                                    {% endif %}
                                 </div>
                                 <div class="content">
                                     <div class="description">
                                         <h4>
-                                            <a href="#">Product name</a>
+                                            <a href="/product/{{ product.id }}">{{ product.name }}</a>
                                         </h4>
                                         <p>
-                                            description
+                                            {{ product.description[:100] }}...
                                         </p>
                                         <div class="price">
-                                            <span class="price-new">$602.00</span>
+                                            <span class="price-new">{{ product.price }}.00	₴</span>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
+                        {% endfor %}
                     </div>
                 </div>
             </div>
