--- a/Online Clothing Store/templates/index.html
+++ b/Online Clothing Store/templates/index.html
@@ -7,8 +7,8 @@
             <div id="content" class="col">
                 <h2>Featured</h2>
                 <div class="row">
-                    <div class="col-md-4 col-sm-2">
-                        {% for product in products %}
+                    {% for product in products %}
+                    <div class="col-md-3 col-sm-2" style="margin-left: 2%;">
                         <div class="header-cart">
                             <div class="product-thumb">
                                 <div class="image mt-3">
@@ -39,8 +39,8 @@
                                 </div>
                             </div>
                         </div>
-                        {% endfor %}
                     </div>
+                    {% endfor %}
                 </div>
             </div>
         </div>
