Implemented Bridge pattern.

--- a/Online Clothing Store/static/styles/css/style.css
+++ b/Online Clothing Store/static/styles/css/style.css
@@ -453,6 +453,16 @@ footer h5 {
   font-weight: 700;
 }
 
+.image-product {
+  width: 200px;
+  height: 225px;
+  justify-content: center;
+}
+
+.img-fluid {
+  max-height: 220px;
+}
+
 .product-thumb .image {
   text-align: center;
   margin-bottom: 15px;
@@ -607,4 +617,9 @@ footer h5 {
 
 footer a {
   font-size: 14px !important;
+}
+
+.intro {
+  font-size: 20px;
+  line-height: 120%;
 }/*# sourceMappingURL=style.css.map */
