--- a/Online Clothing Store/static/styles/sass/style.sass
+++ b/Online Clothing Store/static/styles/sass/style.sass
@@ -392,6 +392,14 @@ footer h5
 .product-thumb h4
     font-weight: 700
 
+.image-product
+    width: 200px
+    height: 225px
+    justify-content: center
+
+.img-fluid
+    max-height: 220px
+
 .product-thumb .image
     text-align: center
     margin-bottom: 15px
@@ -521,3 +529,7 @@ footer h5
 
 footer a
     font-size: 14px!important
+
+.intro
+    font-size: 20px
+    line-height: 120%
