--- a/Online Clothing Store/templates/product.html
+++ b/Online Clothing Store/templates/product.html
@@ -86,10 +86,10 @@
                         <br>
                         <ul class="list-unstyled">
                             <li>
-                                <p>Brand: {{ product.brand }}</p>
+                                <p>Manufacturer: {{ product.brand }}</p>
                             </li>
                             <li>
-                                <p>Product Code: {{ product.product_code }}</p>
+                                <p>ASIN: {{ product.product_code }}</p>
                             </li>
                             <li>
                                 <p>Type: {{ product.type_of_product }}</p>
@@ -104,7 +104,7 @@
                         <div id="product" x-data="{ price:{{ product.price }}, quantity:1 }">
                             <ul class="list-unstyled">
                                 <li>
-                                    <h2><span class="price-new" x-text="price*Math.round(quantity)"></span>.00 ₴</h2>
+                                    <h2><span class="price-new" x-text="price*Math.round(quantity)"></span><span class="price-new">.00 ₴</span></h2>
                                 </li>
                             </ul>
                             <form id="form-product" action="/buy">
@@ -113,7 +113,8 @@
                                         <label for="quantity" class="form-label col-2">
                                             <h3>Quantity</h3>
                                         </label>
-                                        <input x-model="quantity" type="number"
+                                        <input x-model="quantity"
+                                            type="number"
                                             name="quantity"
                                             value="1"
                                             size="2"
@@ -174,22 +175,21 @@
                     </div>
                 </div>
             </div>
-            <h3>Same type products</h3>
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-xl-4" >
-                {% for other_product in other_products_type %}
+            <h2>Same type products</h2>
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-xl-4"  style="margin-left: 5%;">
+                {% for other_product in same_type_products %}
                 <div class="col" style="margin-left: 3%">
                     <div>
                         <div class="header-cart">
                             <div class="product-thumb">
-                                <div class="image mt-3">
+                                <div class="image-product mt-3 mx-5 mb-0">
                                     {% if product.photos[0] %}
                                     <a href="/product/{{ other_product.id }}">
                                         <img
                                             src="{{ other_product.photos[0].url }}"
                                             alt="{{ other_product.name }}"
                                             title="{{ other_product.name }}"
-                                            class="img-fluid"
-                                            width="200px"
+                                            class="img-fluid mt-2"
                                         />
                                     </a>
                                     {% endif %}
@@ -203,7 +203,7 @@
                                             {{ other_product.description[:100] }}...
                                         </p>
                                         <div class="price">
-                                            <span class="price-new">{{ other_product.price }}.00	₴</span>
+                                            <span class="price-new">{{ other_product.price }}.00 ₴</span>
                                         </div>
                                     </div>
                                 </div>
@@ -213,22 +213,21 @@
                 </div>
                 {% endfor %}
             </div>
-            <h3>Same collection products</h3>
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-xl-4">
-                {% for other_product in other_products_collection %}
+            <h2>Same collection products</h2>
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-xl-4"  style="margin-left: 5%;">
+                {% for other_product in same_collection_products %}
                 <div class="col" style="margin-left: 3%">
                     <div>
                         <div class="header-cart">
                             <div class="product-thumb">
-                                <div class="image mt-3">
+                                <div class="image-product mt-3 mx-5 mb-0">
                                     {% if product.photos[0] %}
                                     <a href="/product/{{ other_product.id }}">
                                         <img
                                             src="{{ other_product.photos[0].url }}"
                                             alt="{{ other_product.name }}"
                                             title="{{ other_product.name }}"
-                                            class="img-fluid"
-                                            width="200px"
+                                            class="img-fluid mt-2"
                                         />
                                     </a>
                                     {% endif %}
@@ -242,7 +241,7 @@
                                             {{ other_product.description[:100] }}...
                                         </p>
                                         <div class="price">
-                                            <span class="price-new">{{ other_product.price }}.00	₴</span>
+                                            <span class="price-new">{{ other_product.price }}.00 ₴</span>
                                         </div>
                                     </div>
                                 </div>
